# leetcode-exercises

./: .flake8  Makefile  README.md  pyproject.toml
src/: best_time_to_buy_and_sell_stock.py  find_the_index_of_the_first_occurrence_in_a_string.py  length_of_last_word.py  majority_element.py  merge_sorted_array.py  remove_duplicates_from_sorted_array.py  remove_element.py  roman_to_integer.py  template.py
src/1D_DP/easy/: climbing stairs.py  climbing_stairs.py  cur_rod_recur.py
src/1D_DP/medium/: coin_change.py  house_robber.py  longest_increasing_subsequence.py  word_break.py
src/Array_String/easy/: best_time_to_buy_and_sell_stock.py  find_the_index_of_the_first_occurrence_in_a_string.py  length_of_last_word.py  longest_common_prefix.py  majority_element.py  merge_sorted_array.py  remove_duplicates_from_sorted_array.py  remove_element.py  roman_to_integer.py
src/Array_String/hard/: candy.py  text_justification.py  trapping_rain_water.py
src/Array_String/medium/: best_time_to_buy_and_sell_stock_ii.py  gas_station.py  h_index.py  insert_delete_getrandom_o_1.py  integer_to_roman.py  jump_game.py  jump_game_ii.py  product_of_array_except_self.py  remove_duplicates_from_sorted_array_ii.py  (+3 more)
src/Binary_Tree_General/: Utils.py
src/Heap/: min_heap.py
src/Linked_List/: Utils.py
src/contest/: q2_minimum_cost_to_make_arrays_identical.py
src/greedy/: min_coins.py
tests/: test-merge-sorted-array.py  test_01-merge-sorted-array.py  test_best_time_to_buy_and_sell_stock.py  test_majority_element.py  test_remove_duplicates_from_sorted_array.py  test_remove_element.py
(+147 files in other folders)
